<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rally</string>

    <!-- Strings related to BaseActivity -->
    <string name="git_events_activity_link">Track branches</string>
    <string name="git_activity_link">GitHub Settings</string>
    <string name="pivotal_activity_link">Pivotal Example</string>
    <string name="poker_activity_link">Planning Poker</string>
    <string name="files_activity_link">Track files</string>

    <!-- Strings related to Roadmap -->
    <string name="button_userstory">See current user story</string>
    
    <!-- Strings related to login -->
    <string name="prompt_username">Username or email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login"><b>Sign in to GitHub</b></string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_token">This OAuth token seems to be incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="select_repo_list">Select a repository from the list</string>
    <string name="title_activity_planning_poker">PlanningPoker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_activity_text">Welcome to the Homescreen!</string>
    <string name="planning_poker_text">Welcome to the planning poker game!</string>
    <string name="title_activity_user_stories">UserStories</string>
    <string name="title_activity_git_events">Select branches to track</string>

    <!-- Strings related to GitEvents activity -->
    <string name="title_activity_gitEvents">GitEvents</string>
    <string name="login_button">Go to login!</string>
    <string name="no_repos_found">No repos found. Make sure that you\'re logged in</string>
    <string name="dialog_already_logged_in">Already logged in to GitHub.
                                            \nDo you want to login to another account?</string>
    <string name="instructional_text">Long press a branch to show commits</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_login_as_other">Change account</string>
    <string name="dialog_ok_button">Ok</string>
    <string name="dialog_no_repos_message">Logged in!\nBut you have no own or starred repositories to select.</string>
    <string name="git_settings_label">GitHub settings</string>
    <string name="curr_selected_repo_text">Currently selected repository</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="prompt_token_hint">OAuth Token</string>
    <string name="error_token_length">Token needs to be 40 signs long.</string>
    <string name="git_authenticate_label">Authenticate with github.com</string>
    <string name="repo_selection_label">Repository Selection</string>
    <string name="change_repo_button">Change</string>
    <string name="logout_button">Logout</string>
    <string name="remember_git_login">Remember login</string>

    <string name="list_delete">DEL</string>
    <string name="expandable_list_link">List example</string>
    

    <!-- Strings related to FilesActivity -->
    <string name="title_activity_files_activity">Files</string>
    <string name="update_button_text">Get files from repo</string>
    <string name="store_button_text">Store</string>
    <string name="load_button_text">Load</string>
    <string name="store_selection_button_text">Store selection</string>
    <string name="title_activity_view_branches">ViewBranchesActivity</string>
    
    <string name="roadmap_activity_link">Roadmap</string>
    <string name="roadmap_top_label">Roadmap</string>
    <string name="dialog_new_custom_task">Create a new custom task</string>
    <string name="task_title_dialog_hint">Title</string>
    <string name="task_desc_dialog_hint">Description (optional)</string>
    <string name="create_a_new_class">Create a new Class</string>
    <string name="implement_algorithm">Implement algorithm</string>
    <string name="dialog_handle_excption_task">Handle an Exception</string>
    <string name="dialog_function_task">Implement/change function</string>
    <string name="macro_algo_hint">Realize algorithm</string>
    <string name="macro_class_hint">Create a class</string>
    <string name="macro_exception_hint">Handle an exception</string>
    <string name="macro_function_hint">Implement/change a function</string>
    <string name="task_menu_edit">Edit</string>
    <string name="task_menu_delete">Delete</string>
    
    <!-- Strings related to FileActivity -->
    <string name="title_activity_files">Track files</string>
    <string name="pivotal_main_menu">Pivotal</string>
    <string name="planning_poker_main_menu">Planning Poker</string>
    <string name="roadmap_main_menu">Roadmap</string>
    <string name="git_settings_main_menu">Git Settings</string>
    <string name="track_files_main_menu">Track Files</string>

    <string name="roadmap_details_top_label">Task Details</string>


</resources>
