<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/edit_activity_link"
          android:title="@string/edit_activity_link"
          android:showAsAction="never" />
    
    <item android:id="@+id/git_activity_link"
          android:title="@string/git_activity_link"
          android:showAsAction="never" />
    
    <item android:id="@+id/pivotal_activity_link"
          android:title="@string/pivotal_activity_link"
          android:showAsAction="never" />
    
    <item android:id="@+id/poker_activity_link"
          android:title="@string/poker_activity_link"
          android:showAsAction="never" />
    
    <item android:id="@+id/files_activity_link"
          android:title="@string/files_activity_link"
          android:showAsAction="never" />

</menu>
